syntax = "proto3";

package common;

option go_package = "./pb";

enum AccountType {
    ADMIN = 0;
    AGENCY = 1;
    DIVER = 2;
}

enum GenderType {
    FEMALE = 0;
    MALE = 1;
}

enum LevelType {
    INSTRUCTOR = 0;
    MASTER = 1;
    RESCUE = 2;
    ADVANCED_OPEN_WATER = 3;
    OPEN_WATER = 4;
}

enum TripType {
    ONSHORE = 0;
    OFFSHORE = 1;
}

message Address {
    string country = 1;
    string region = 2;
    string city = 3;
    string addres_line_1 = 4;
    string addres_line_2 = 5;
    string postal_code = 6;
}
